# ChangeLog for app-crypt/mit-krb5
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/mit-krb5/ChangeLog,v 1.83 2005/06/06 13:46:12 seemant Exp $

  06 Jun 2005; Seemant Kulleen <seemant@gentoo.org> mit-krb5-1.4.ebuild:
  ok, this is now usable

  03 Jun 2005; Mark Loeser <halcy0n@gentoo.org>
  +files/mit-krb5-1.3.6-gcc4.patch, mit-krb5-1.3.6-r2.ebuild:
  Adding GCC4 patch, thanks to wuno@lsvw.de

  08 Apr 2005; Seemant Kulleen <seemant@gentoo.org> mit-krb5-1.4.ebuild:
  OK, so the scheme is settled -- includes in /usr/include/kerberos/mit, libs
  in /usr/$(get_libdir)/kerberos/mit.  You may install this if you wish, but
  you'll need to generate a whole bunch of symlinks to get it to work.  The
  kerberos-update script is on its way, but it'll take a few days probably.

  08 Apr 2005; Seemant Kulleen <seemant@gentoo.org> mit-krb5-1.4.ebuild:
  should now install into completely non-clobbering locations. Warning: please
  do NOT install this YET (still). kerberos-update and heimdal need to be
  fixed up first

*mit-krb5-1.4 (07 Apr 2005)

  07 Apr 2005; Seemant Kulleen <seemant@gentoo.org>
  -files/mit-krb5-1.3.1-res_search.patch.bz2,
  -files/mit-krb5-1.3.3-aname.patch.bz2,
  -files/mit-krb5-1.3.3-autoheader.patch.bz2,
  -files/mit-krb5-1.3.3-res_search.patch.bz2,
  -files/mit-krb5-1.3.4-autoheader.patch.bz2,
  -files/mit-krb5-1.3.4-res_search.patch.bz2,
  -files/mit-krb5-1.3.4-tempfile.patch.bz2,
  -files/mit-krb5-1.3.5-autoheader.patch.bz2,
  -files/mit-krb5-1.3.5-res_search.patch.bz2,
  -files/mit-krb5-1.3.5-suid_fix.patch.bz2,
  +files/mit-krb5-1.4-2005-001.patch, -files/2004-002-patch_1.3.4.txt,
  -files/2004-003-patch_1.3.4.txt, +mit-krb5-1.4.ebuild:
  version bump. This is HARDMASKED because the ebuild is still a work in
  progress. Please do NOT emerge this, unless you read my blog (I will give
  clearance in my blog for emerging this when the time arrives -- that time is