@@ -1,7 +1,8 @@
-MD5 b763b695a626117c67a9cd8663b342de mit-krb5-1.4.ebuild 2111
 MD5 825f0126519fefa7b4e9fb330c9e81b3 mit-krb5-1.3.6-r2.ebuild 4276
 MD5 f3ea9dd1d52f37139fbc4d101044f821 metadata.xml 241
 MD5 31e32fa099e18ae660a38dc009bceeb0 ChangeLog 14143
+MD5 407d5077844490987dfcc806dcd8cf49 mit-krb5-1.4-r1.ebuild 2416
+MD5 b763b695a626117c67a9cd8663b342de mit-krb5-1.4.ebuild 2111
 MD5 186bd4cbeff944079f44105d4c962c80 files/kdc.conf 438
 MD5 fbb2a86038ab98ca0c7493ad9d55ace9 files/krb5.conf 541
 MD5 c451148d1b3e182a19a8f9084d0b55b8 files/krb5.confd 233
@@ -15,3 +16,4 @@ MD5 a02d4871edc472776ad7ccc23fb8331d files/digest-mit-krb5-1.4 65
 MD5 07a38334b351973026f8616b79662cfb files/mit-krb5-1.4-2005-001.patch 2758
 MD5 ae7e2bde0b20e580f49d5a3c524b445b files/mit-krb5-1.4-lazyldflags.patch 509
 MD5 1db67f7788b8dbae908d29565c7fca2b files/mit-krb5-1.3.6-gcc4.patch 1139
+MD5 a02d4871edc472776ad7ccc23fb8331d files/digest-mit-krb5-1.4-r1 65
