@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/mit-krb5
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/mit-krb5/ChangeLog,v 1.83 2005/06/06 13:46:12 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/mit-krb5/ChangeLog,v 1.84 2005/06/07 17:27:35 seemant Exp $
+
+*mit-krb5-1.4-r1 (07 Jun 2005)
+
+  07 Jun 2005; Seemant Kulleen <seemant@gentoo.org> +mit-krb5-1.4-r1.ebuild:
+  fix for bug #95305 by Rouslan Solomakhin <solomarv@clarkson.edu> -- no more
+  file collisions with ftp and telnet packages
 
   06 Jun 2005; Seemant Kulleen <seemant@gentoo.org> mit-krb5-1.4.ebuild:
   ok, this is now usable
